--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
 		<div class="wrapper">
 		<div class="sidebar">
 			<a href="#" id="illini"><img src="logo.gif"></a>
-			<div class="vertical"></div>
-			<ul class="linkbar">
-				<li><a href="#">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="placement.html">Placement Test</a></li>
-				<li><a href="courses.html">Courses</a></li>
-				<li><a href="resources.html">Resources</a></li>
-				<li><a href="japan.html">About Japan</a></li>
-				<li><a href="studyinjpn.html">Study in Japan</a></li>
-				<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
-			</ul>
+			<div class="inbar">
+				<div class="vertical"></div>
+				<div class="content">
+					<ul class="linkbar">
+						<li><a href="#">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="placement.html">Placement Test</a></li>
+						<li><a href="courses.html">Courses</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="japan.html">About Japan</a></li>
+						<li><a href="studyinjpn.html">Study in Japan</a></li>
+						<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
+					</ul>
+				</div>
+				<div class="parent"><img src="list1.png" style="margin-top:5px"></img></div>
+			</div>
 		</div>
 		<div class="header">
 			<div id="title">
