updated responsiveness of website

--- a/about.html
+++ b/about.html
@@ -15,40 +15,45 @@
 		<div class="wrapper">
 		<div class="sidebar">
 			<a href="index.html" id="illini"><img src="logo.gif"></a>
-			<div class="vertical"></div>
-			<ul class="linkbar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="placement.html">Placement Test</a></li>
-				<li><a href="courses.html">Courses</a></li>
-				<li><a href="resources.html">Resources</a></li>
-				<li><a href="japan.html">About Japan</a></li>
-				<li><a href="studyinjpn.html">Study in Japan</a></li>
-				<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
-			</ul>
+			<div class="inbar">
+				<div class="vertical"></div>
+				<div class="content">
+					<ul class="linkbar">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="#">About Us</a></li>
+						<li><a href="placement.html">Placement Test</a></li>
+						<li><a href="courses.html">Courses</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="japan.html">About Japan</a></li>
+						<li><a href="studyinjpn.html">Study in Japan</a></li>
+						<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
+					</ul>
+				</div>
+				<div class="parent"><img src="list1.png" style="margin-top:5px"></img></div>
+			</div>
 		</div>
-		<div class="header">
+		<div class="header inner">
 			<div id="title">
 				<p id="t_eng">The Japanese Language Program</p>
 				<p id="t_uni">University of Illinois at Urbana Champaign</p>
 				<p id="t_jpn">イ リ ノイ大学日本語プログラムへようこそ！</p>
 			</div>
 			<div class="horizontal"></div>
-			<div class="innter innertext large mtop">About Us</div>
+			<div class="innertext large mtop">About Us</div>
 		</div>
 		<div class="inner">
 			<div class="innertext">
 				<p>The Japanese language program at UIUC offers courses of four levels from elementary (JAPN 201/202) to fourth-year (JAPN 440/441) as well as courses for those who wish to teach Japanese (JAPN 460/461).  Elementary Japanese I/II (201/202) are for those who have no background/experience learning Japanese.  Students who wish to enroll in a Japanese language course must take a placement test at the beginning of each semester to be placed in a course of the appropriate level.</p>
 			</div>
 			<div class="horizontal"></div>
-			<div class="innter innertext large mtop">Requirements</div>
+			<div class="innertext large mtop">Requirements</div>
 			<div class="innertext requirements">
 				<a href="http://www.ealc.uiuc.edu/ealc/program/ugmajor.htm" class="marginr">Major in EALC</a>
 				<a href="http://www.ealc.uiuc.edu/ealc/program/ugminor.htm" class="marginr">Minor in EALC</a>
 				<a href="http://www.ealc.uiuc.edu/ealc/program/graduate.htm" class="marginr">Graduate Program</a>
 			</div>
 			<div class="horizontal"></div>
-			<div class="innter innertext large mtop">Instructors</div>
+			<div class="innertext large mtop">Instructors</div>
 			<div class="instructors">
 				<div class="prof">
 					<p>Yohei Endo</p>
@@ -97,15 +102,15 @@
 					<a href="mailto:yofune2@illinois.edu">yofune2@illinois.edu</a>
 				</div>
 			</div>
+			
 		</div>
 		<div class="push"></div>
 		</div>
-		<div class="footer">
+		<div class="footer inner">
 			<p>Japanese Language Program<br>
 			Department of East Asian Languages and Cultures<br>
 			University of Illinois at Urbana Champaign<br>
 			2090 Foreign Language Building, 707 S. Mathews, Urbana, IL 61801</p>
-
 		</div>
 	</body>
 </html>
