--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="parent"><img src="list1.png" style="margin-top:5px"></img></div>
 			</div>
 		</div>
-		<div class="header">
+		<div class="header inner">
 			<div id="title">
 				<p id="t_eng">The Japanese Language Program</p>
 				<p id="t_uni">University of Illinois at Urbana Champaign</p>
@@ -65,7 +65,7 @@
 		</script>
 		<div class="push"></div>
 		</div>
-		<div class="footer">
+		<div class="footer inner">
 			<p>Japanese Language Program<br>
 			Department of East Asian Languages and Cultures<br>
 			University of Illinois at Urbana Champaign<br>
