--- a/japan.html
+++ b/japan.html
@@ -15,26 +15,31 @@
 		<div class="wrapper">
 		<div class="sidebar">
 			<a href="index.html" id="illini"><img src="logo.gif"></a>
-			<div class="vertical"></div>
-			<ul class="linkbar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="placement.html">Placement Test</a></li>
-				<li><a href="courses.html">Courses</a></li>
-				<li><a href="resources.html">Resources</a></li>
-				<li><a href="#">About Japan</a></li>
-				<li><a href="studyinjpn.html">Study in Japan</a></li>
-				<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
-			</ul>
+			<div class="inbar">
+				<div class="vertical"></div>
+				<div class="content">
+					<ul class="linkbar">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="placement.html">Placement Test</a></li>
+						<li><a href="courses.html">Courses</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="#">About Japan</a></li>
+						<li><a href="studyinjpn.html">Study in Japan</a></li>
+						<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
+					</ul>
+				</div>
+				<div class="parent"><img src="list1.png" style="margin-top:5px"></img></div>
+			</div>
 		</div>
-		<div class="header">
+		<div class="header inner">
 			<div id="title">
 				<p id="t_eng">The Japanese Language Program</p>
 				<p id="t_uni">University of Illinois at Urbana Champaign</p>
 				<p id="t_jpn">イ リ ノイ大学日本語プログラムへようこそ！</p>
 			</div>
 			<div class="horizontal"></div>
-			<div class="innter innertext large mtop">About Japan</div><br>
+			<div class="innertext large mtop">About Japan</div><br>
 		</div>
 		<div class="inner">
 			<div class="innertext">
@@ -46,14 +51,14 @@
 				Chinese characters (kanji) 日 means "the Sun"; 本, "origin"; and 国, "nation / country"</p>
 			</div>
 			<br>
-			<div class="innter innertext large mtop">History of Japan</div><br>
+			<div class="innertext large mtop">History of Japan</div><br>
 			<div class="innertext">
 				<a href="http://www.japan-guide.com/e/e641.html" class="lg">History by Periods/Themes</a><br>
 				<a href="http://web-japan.org/museum/historyofjp/histjp.html" class="lg">Portraits/Images of Japanese History</a><br>
 				<a href="http://newton.uor.edu/Departments&Programs/AsianStudiesDept/japan-history.html" class="lg">An Annotated Directory of Internet Resources: History of Japan</a>
 			</div>
 			<br>
-			<div class="innter innertext large mtop">Geography</div><br>
+			<div class="innertext large mtop">Geography</div><br>
 			<div class="innertext">
 				<img src="http://japanese.ealc.illinois.edu/_includes/images/CIA_map_of_Japan.gif"></img><br><br>
 				<a href="http://geography.about.com/library/cia/blcjapan.htm" class="lg">Japan: Facts and Figures</a><br>
@@ -62,7 +67,7 @@
 			</div>
 			<br>
 			<div class="horizontal" style="width:400px"></div>
-			<div class="innter innertext large mtop">Culture</div>
+			<div class="innertext large mtop">Culture</div>
 			<div class="innertext">
 				<p class="lgr">Festivals and Holidays</p>
 				<a href="http://www.japan-guide.com/e/e2062.html" class="lg">Japan-Guide.com: Annual Events</a><br>
@@ -81,16 +86,15 @@
 				<a href="http://www.lonelyplanet.com/japan" class="lg">Lonely Planet: Japan Travel Information</a><br>
 				<a href="http://www.fco.gov.uk/en/travelling-and-living-overseas/travel-advice-by-country/asia-oceania/japan" class="lg">Foreign Commonwealth Office: Japan Travel Advice</a><br><br>
 				<div class="horizontal"></div>
-				<div class="push"></div>
 			</div>
 		</div>
+		<div class="push"></div>
 		</div>
-		<div class="footer">
+		<div class="footer inner">
 			<p>Japanese Language Program<br>
 			Department of East Asian Languages and Cultures<br>
 			University of Illinois at Urbana Champaign<br>
 			2090 Foreign Language Building, 707 S. Mathews, Urbana, IL 61801</p>
-
 		</div>
 	</body>
 </html>
