--- a/resources.html
+++ b/resources.html
@@ -15,26 +15,31 @@
 		<div class="wrapper">
 		<div class="sidebar">
 			<a href="index.html" id="illini"><img src="logo.gif"></a>
-			<div class="vertical"></div>
-			<ul class="linkbar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="placement.html">Placement Test</a></li>
-				<li><a href="courses.html">Courses</a></li>
-				<li><a href="#">Resources</a></li>
-				<li><a href="japan.html">About Japan</a></li>
-				<li><a href="studyinjpn.html">Study in Japan</a></li>
-				<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
-			</ul>
+			<div class="inbar">
+				<div class="vertical"></div>
+				<div class="content">
+					<ul class="linkbar">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="placement.html">Placement Test</a></li>
+						<li><a href="courses.html">Courses</a></li>
+						<li><a href="#">Resources</a></li>
+						<li><a href="japan.html">About Japan</a></li>
+						<li><a href="studyinjpn.html">Study in Japan</a></li>
+						<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
+					</ul>
+				</div>
+				<div class="parent"><img src="list1.png" style="margin-top:5px"></img></div>
+			</div>
 		</div>
-		<div class="header">
+		<div class="header inner">
 			<div id="title">
 				<p id="t_eng">The Japanese Language Program</p>
 				<p id="t_uni">University of Illinois at Urbana Champaign</p>
 				<p id="t_jpn">イ リ ノイ大学日本語プログラムへようこそ！</p>
 			</div>
 			<div class="horizontal"></div>
-			<div class="innter innertext large mtop">On Campus Resources</div>
+			<div class="innertext large mtop">On Campus Resources</div>
 		</div>
 		<div class="inner">
 			<div class="innertext">
@@ -43,33 +48,33 @@
 				<a href="http://japanhouse.art.uiuc.edu/" class="lg">Japan House</a>
 			</div>
 			<br>
-			<div class="innter innertext large mtop">Student Organizations at UIUC</div>
+			<div class="innertext large mtop">Student Organizations at UIUC</div>
 			<div class="innertext">
 				<a href="https://www.facebook.com/UIUCJNET" class="lg">Japan Intercultural Network</a>
 			</div>
 			<br>
-			<div class="innter innertext large mtop">Other Links</div>
+			<div class="innertext large mtop">Other Links</div>
 			<div class="innertext">
 				<a href="http://www.jpf.go.jp/e/index.html" class="lg">Japan Foundation</a>
 			</div>
 			<br>
 			<div class="horizontal" style="width:400px"></div>
-			<div class="innter innertext large mtop">Study Aids</div><br>
+			<div class="innertext large mtop">Study Aids</div><br>
 			<div class="innertext">
 				<a href="http://language.tiu.ac.jp/index_e.html" class="lg">Reading Tutor</a><br>
 				<p>Provides a range of tools (dictionaries, reading materials, level-check quizzes) to help Japanese language learners improve their ability to read Japanese.</p>
 				<a href="http://www.dartmouth.edu/~kanji/" class="lg">Kanji Practice</a><br>
 				<p>Practice reading and writing chinese characters as used in Japanese (kanji) with correct stroke order; the site offers video tutorials for writing each of kanji that appear in various Japanese language text books.</p>
 			</div>
+			<div class="horizontal"></div>
 			<div class="push"></div>
 		</div>
 		</div>
-		<div class="footer">
+		<div class="footer inner">
 			<p>Japanese Language Program<br>
 			Department of East Asian Languages and Cultures<br>
 			University of Illinois at Urbana Champaign<br>
 			2090 Foreign Language Building, 707 S. Mathews, Urbana, IL 61801</p>
-
 		</div>
 	</body>
 </html>
