--- a/courses.html
+++ b/courses.html
@@ -15,26 +15,31 @@
 		<div class="wrapper">
 		<div class="sidebar">
 			<a href="index.html" id="illini"><img src="logo.gif"></a>
-			<div class="vertical"></div>
-			<ul class="linkbar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="placement.html">Placement Test</a></li>
-				<li><a href="#">Courses</a></li>
-				<li><a href="resources.html">Resources</a></li>
-				<li><a href="japan.html">About Japan</a></li>
-				<li><a href="studyinjpn.html">Study in Japan</a></li>
-				<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
-			</ul>
+			<div class="inbar">
+				<div class="vertical"></div>
+				<div class="content">
+					<ul class="linkbar">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="placement.html">Placement Test</a></li>
+						<li><a href="#">Courses</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="japan.html">About Japan</a></li>
+						<li><a href="studyinjpn.html">Study in Japan</a></li>
+						<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
+					</ul>
+				</div>
+				<div class="parent"><img src="list1.png" style="margin-top:5px"></img></div>
+			</div>
 		</div>
-		<div class="header">
+		<div class="header inner">
 			<div id="title">
 				<p id="t_eng">The Japanese Language Program</p>
 				<p id="t_uni">University of Illinois at Urbana Champaign</p>
 				<p id="t_jpn">イ リ ノイ大学日本語プログラムへようこそ！</p>
 			</div>
 			<div class="horizontal"></div>
-			<div class="innter innertext large mtop">Courses</div>
+			<div class="innertext large mtop">Courses</div>
 		</div>
 		<div class="inner">
 			<h3 style="text-align:center">Fall 2014</h3>
@@ -82,11 +87,11 @@
 				<p>Prerequisite: JAPN 440 or equivalent. 3 undergraduate hours. 4 graduate hours. <br><Br>
 				Prior knowledge of language requires a placement exam to be given. Call 244-1432 for date of exam and to register for the test.</p>
 			</div>
+			<div class="horizontal"></div>
 		</div>
-		<div class="horizontal"></div>
 		<div class="push"></div>
 		</div>
-		<div class="footer">
+		<div class="footer inner">
 			<p>Japanese Language Program<br>
 			Department of East Asian Languages and Cultures<br>
 			University of Illinois at Urbana Champaign<br>
