--- a/placement.html
+++ b/placement.html
@@ -15,46 +15,51 @@
 		<div class="wrapper">
 		<div class="sidebar">
 			<a href="index.html" id="illini"><img src="logo.gif"></a>
-			<div class="vertical"></div>
-			<ul class="linkbar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="#">Placement Test</a></li>
-				<li><a href="courses.html">Courses</a></li>
-				<li><a href="resources.html">Resources</a></li>
-				<li><a href="japan.html">About Japan</a></li>
-				<li><a href="studyinjpn.html">Study in Japan</a></li>
-				<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
-			</ul>
+			<div class="inbar">
+				<div class="vertical"></div>
+				<div class="content">
+					<ul class="linkbar">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="#">Placement Test</a></li>
+						<li><a href="courses.html">Courses</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="japan.html">About Japan</a></li>
+						<li><a href="studyinjpn.html">Study in Japan</a></li>
+						<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
+					</ul>
+				</div>
+				<div class="parent"><img src="list1.png" style="margin-top:5px"></img></div>
+			</div>
 		</div>
-		<div class="header">
+		<div class="header inner">
 			<div id="title">
 				<p id="t_eng">The Japanese Language Program</p>
 				<p id="t_uni">University of Illinois at Urbana Champaign</p>
 				<p id="t_jpn">イ リ ノイ大学日本語プログラムへようこそ！</p>
 			</div>
 			<div class="horizontal"></div>
-			<div class="innter innertext large mtop">Placement</div>
+			<div class="innertext large mtop">Placement</div>
 		</div>
 		<div class="inner">
 			<div class="innertext">
 				<p>Students with background / experience of learning Japanese are required to take a placement test offered at the beginning of each semester. <br> For registration, please visit: <a href="https://apps.atlas.illinois.edu/FormBuilderSurvey/Survey/LAS/SLCL/Chinese__Japanese___Korean_Placement_Test_Fall_2014/Survey">Japanese Placement Test Fall 2014</a> or contact Ms. Debbie Kraybill (<a href="mailto:debrice@illinois.edu">debrice@illinois.edu</a>) at 3090 FLB.</p>
 			</div>
 			<br>
-			<div class="innter innertext large mtop">Japanese Language Proficiency Test</div>
+			<div class="innertext large mtop">Japanese Language Proficiency Test</div>
 			<div class="innertext">
 				<a href="http://www.jlpt.jp/e/">Japanese Language Proficiency Test Official Website</a><br>
 				<a href="http://momo.jpf.go.jp/jlpt/overseas/index_en.html">Information for the JLPT (Japan Foundation)</a>
 			</div>
 			<br>
-			<div class="innter innertext large mtop">Other Japanese Proficiency Tests</div>
+			<div class="innertext large mtop">Other Japanese Proficiency Tests</div>
 			<div class="innertext">
 				<a href="http://www.actfl.org/i4a/pages/index.cfm?pageid=3348">ACTFL Oral Proficiency Interview (OPI)</a>
 			</div>
 			<div class="push"></div>
 		</div>
 		</div>
-		<div class="footer">
+		<div class="footer inner">
 			<p>Japanese Language Program<br>
 			Department of East Asian Languages and Cultures<br>
 			University of Illinois at Urbana Champaign<br>
