--- a/studyinjpn.html
+++ b/studyinjpn.html
@@ -15,26 +15,31 @@
 		<div class="wrapper">
 		<div class="sidebar">
 			<a href="index.html" id="illini"><img src="logo.gif"></a>
+			<div class="inbar">
 			<div class="vertical"></div>
-			<ul class="linkbar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="placement.html">Placement Test</a></li>
-				<li><a href="courses.html">Courses</a></li>
-				<li><a href="resources.html">Resources</a></li>
-				<li><a href="japan.html">About Japan</a></li>
-				<li><a href="#">Study in Japan</a></li>
-				<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
-			</ul>
+				<div class="content">
+					<ul class="linkbar">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="placement.html">Placement Test</a></li>
+						<li><a href="courses.html">Courses</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="japan.html">About Japan</a></li>
+						<li><a href="#">Study in Japan</a></li>
+						<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
+					</ul>
+				</div>
+				<div class="parent"><img src="list1.png" style="margin-top:5px"></img></div>
+			</div>
 		</div>
-		<div class="header">
+		<div class="header inner">
 			<div id="title">
 				<p id="t_eng">The Japanese Language Program</p>
 				<p id="t_uni">University of Illinois at Urbana Champaign</p>
 				<p id="t_jpn">イ リ ノイ大学日本語プログラムへようこそ！</p>
 			</div>
 			<div class="horizontal"></div>
-			<div class="innter innertext large mtop">Study in Japan</div>
+			<div class="innertext large mtop">Study in Japan</div>
 		</div>
 		<div class="inner">
 			<div class="innertext">
@@ -44,12 +49,11 @@
 			<div class="push"></div>
 		</div>
 		</div>
-		<div class="footer">
+		<div class="footer inner">
 			<p>Japanese Language Program<br>
 			Department of East Asian Languages and Cultures<br>
 			University of Illinois at Urbana Champaign<br>
 			2090 Foreign Language Building, 707 S. Mathews, Urbana, IL 61801</p>
-
 		</div>
 	</body>
 </html>
