upload page edited

--- a/upload.html
+++ b/upload.html
@@ -14,21 +14,25 @@
 	<body>
 		<div class="wrapper">
 		<div class="sidebar">
-			<a href="#" id="illini"><img src="logo.gif"></a>
-			<div class="vertical"></div>
-			<ul class="linkbar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="placement.html">Placement Test</a></li>
-				<li><a href="courses.html">Courses</a></li>
-				<li><a href="resources.html">Resources</a></li>
-				<li><a href="japan.html">About Japan</a></li>
-				<li><a href="studyinjpn.html">Study in Japan</a></li>
-				<li><a href="websites.html">Useful Websites</a></li>
-				<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
-			</ul>
+			<a href="index.html" id="illini"><img src="logo.gif"></a>
+			<div class="inbar">
+				<div class="vertical"></div>
+				<div class="content">
+					<ul class="linkbar">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="placement.html">Placement Test</a></li>
+						<li><a href="courses.html">Courses</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="japan.html">About Japan</a></li>
+						<li><a href="studyinjpn.html">Study in Japan</a></li>
+						<li><a href="http://www.ealc.illinois.edu/">EALC</a></li>
+					</ul>
+				</div>
+				<div class="parent"><img src="list1.png" style="margin-top:5px"></img></div>
+			</div>
 		</div>
-		<div class="header">
+		<div class="header inner">
 			<div id="title">
 				<p id="t_eng">The Japanese Language Program</p>
 				<p id="t_uni">University of Illinois at Urbana Champaign</p>
@@ -74,7 +78,7 @@
 		</script>
 		<div class="push"></div>
 		</div>
-		<div class="footer">
+		<div class="footer inner">
 			<p>Japanese Language Program<br>
 			Department of East Asian Languages and Cultures<br>
 			University of Illinois at Urbana Champaign<br>
