--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
 			<div class="horizontal"></div>
 			<div class="innertext large mtop">Requirements</div>
 			<div class="innertext requirements">
-				<a href="http://www.ealc.uiuc.edu/ealc/program/ugmajor.htm" class="marginr">Major in EALC</a>
-				<a href="http://www.ealc.uiuc.edu/ealc/program/ugminor.htm" class="marginr">Minor in EALC</a>
+				<a href="http://www.ealc.uiuc.edu/ealc/program/ugmajor.htm" class="marginr">Major in EALC</a><br>
+				<a href="http://www.ealc.uiuc.edu/ealc/program/ugminor.htm" class="marginr">Minor in EALC</a><br>
 				<a href="http://www.ealc.uiuc.edu/ealc/program/graduate.htm" class="marginr">Graduate Program</a>
 			</div>
 			<div class="horizontal"></div>
