--- a/courses.html
+++ b/courses.html
@@ -64,7 +64,7 @@
 				<h3>JAPN 440 Fourth-Year Japanese I</h3>
 				<p>Prerequisite: JAPN 306 or equivalent. 3 undergraduate hours. 4 graduate hours.<br><br> Further developments of skills in sophisticated Japanese language use, including readings in authentic materials in a wide variety of writing styles, writing for formal occasions, and speaking appropriately according to the situation while using precise vocabulary in correct level of speech.</p>
 			</div>
-			<div class="horizontal" style="width:400px"></div>
+			<div class="shorizontal"></div>
 			<h3 style="text-align:center">Spring 2015</h3>
 			<div class="innertext">
 				<h3>JAPN 202 Elementary Japanese II</h3>
