--- a/resources.html
+++ b/resources.html
@@ -58,7 +58,7 @@
 				<a href="http://www.jpf.go.jp/e/index.html" class="lg">Japan Foundation</a>
 			</div>
 			<br>
-			<div class="horizontal" style="width:400px"></div>
+			<div class="shorizontal"></div>
 			<div class="innertext large mtop">Study Aids</div><br>
 			<div class="innertext">
 				<a href="http://language.tiu.ac.jp/index_e.html" class="lg">Reading Tutor</a><br>
