--- a/japan.html
+++ b/japan.html
@@ -66,7 +66,7 @@
 				<a href="http://www.international.ucla.edu/eas/japan/geography/" class="lg">UCLA Center for East Asian Studies: Japanese Geography</a>
 			</div>
 			<br>
-			<div class="horizontal" style="width:400px"></div>
+			<div class="shorizontal"></div>
 			<div class="innertext large mtop">Culture</div>
 			<div class="innertext">
 				<p class="lgr">Festivals and Holidays</p>
